[package]
name = "krylov_rs"
version = "0.1.0"
edition = "2021"
description = "A Rust library for Krylov subspace methods."
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.15"
num-traits = "0.2"
